# EnterpriseHub

./: .coverage.Chunkys-Mac-mini.local.42153.XJFKRDRx  .coverage.Chunkys-Mini.lan.99584.XDbWJtNx  .coveragerc  .env.example  .env.jorge  .env.jorge.production.template  .env.jorge.template  .env.production.example  .env.production.template  .env.service6.production  .env.service6.template  .geminiignore  .gitignore  .mcp.json  .osv-allowlist.json  .pre-commit-config.yaml  .railwayignore  .secrets.baseline  .semgrep.yml  .supermemory_state_2026_02_05.json  075c73e6.csv  2026_STRATEGIC_ROADMAP.md  23b26838 (1).csv  34f0bd81.csv  37a3a7e6.csv  4lthedi1ugreblitbbnjqefrs6uolrig.darc  5b40ed36.csv  =0.5.0  ABANDONMENT_RECOVERY_IMPLEMENTATION.md  ABSTRACT_METHOD_FIX.md  ADAPTIVE_PCS_IMPLEMENTATION.md  ADVANCED_AI_COACHING_IMPLEMENTATION_REPORT.md  ADVANCED_WORKFLOW_AUTOMATION_IMPLEMENTATION_COMPLETE.md  AGENTS.md  AGENT_4_IMPLEMENTATION_COMPLETE.md  AGENT_ENHANCEMENT_SYSTEM_PRODUCTION_DEPLOYMENT_COMPLETE.md  AGENT_GOVERNANCE_PROTOCOL.md  AGENT_MEMORY_STRATEGY.md  AGENT_SKILLS_IMPLEMENTATION_GUIDE.md  AGENT_SKILL_CONTINUATION_PACKAGE.md  (+757 more)
advanced_rag_system/: .coveragerc  =2.5.0  AGENTIC_RAG_PLAN.md  ARCHITECTURE.md  BENCHMARKS.md  CONTINUATION_PLAN_NEXT_PHASE.md  DEPLOYMENT_READY.md  DIRECTORY_STRUCTURE.md  ENTERPRISE.md  IMPLEMENTATION_PLAN.md  MLOPS_README.md  Makefile  PHASE2_DAYS_8-10_COMPLETION.md  PHASE3_CONTINUATION_PROMPT.md  PHASE4_CONTINUATION_PROMPT.md  PROJECT_STATUS.md  README.md  graph_rag.py  hybrid_search.py  pyproject.toml  pytest.ini  requirements.txt  requirements_demo.txt  reranker.py  test_phase3_complete.py  validate_phase2.py
advanced_rag_system/.github/workflows/: benchmark.yml
advanced_rag_system/deployment/: docker-compose.prod.yml
advanced_rag_system/mlops/deployment/: canary_deployment.py
advanced_rag_system/mlops/governance/: audit_trail.py
advanced_rag_system/mlops/monitoring/: drift_detection.py
advanced_rag_system/mlops/pipelines/: automated_pipeline.py
advanced_rag_system/mlops/registry/: model_registry.py
advanced_rag_system/monitoring/: prometheus.yml
advanced_rag_system/plans/: phase4_design_chroma_production.md  phase4_design_contextual_compression.md  phase4_design_self_query.md
advanced_rag_system/scripts/: compare_benchmarks.py  generate_benchmark_report.py
advanced_rag_system/src/: __init__.py  agent_forge_demo.py  demo_app.py
advanced_rag_system/src/agents/: __init__.py  agentic_rag.py  decision_tracer.py  memory.py  query_planner.py  reflection.py  tool_registry.py
advanced_rag_system/src/core/: __init__.py  config.py  exceptions.py  types.py
advanced_rag_system/src/embeddings/: __init__.py  base.py  cache.py  clip_provider.py  openai_provider.py
advanced_rag_system/src/enterprise/: __init__.py  auth.py  multi_tenant.py  usage_metering.py
advanced_rag_system/src/evaluation/: ab_testing.py  datasets.py  metrics.py
advanced_rag_system/src/middleware/: __init__.py  circuit_breaker.py  rate_limiter.py
advanced_rag_system/src/monitoring/: __init__.py  health.py  metrics.py  tracing.py
advanced_rag_system/src/multimodal/: __init__.py  image_retriever.py  structured_retriever.py  unified_retriever.py
advanced_rag_system/src/query/: __init__.py  advanced_parser.py  entity_extractor.py  intent_classifier_v2.py  (+1 more)
advanced_rag_system/tests/: __init__.py  conftest.py  test_enterprise.py  test_phase2_integration.py
advanced_rag_system/venv312/: pyvenv.cfg
agentforge/: .coveragerc  README.md  pyproject.toml  streamlit_app.py
agentforge/agentforge/: __init__.py
agentforge/docs/: COMPARISON.md  REVENUE_FIRST_FURTHER_DEVELOPMENT_SPEC.md  VS_LANGCHAIN.md
agentforge/examples/: content_pipeline.py  customer_support.py  data_analysis.py  legal_research.py  pipeline.yaml  smb_clinic_intake.py  smb_legal_accounting.py  smb_local_services.py
agentforge/scripts/: benchmark_engine.py
agentforge/tests/: test_a2a.py  test_cli.py  test_comms.py  test_config.py  test_dag.py  test_engine.py  test_ext.py  test_llm.py  test_mcp.py  test_memory.py  test_observe.py  test_reporting_integration.py  test_runlog.py  test_runtime_agent.py  test_tools.py  test_vector_memory.py
ai-devops-suite/: .env.example  DEPLOYMENT_SUMMARY.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ai-devops-suite/alembic/: env.py
ai-devops-suite/tests/: conftest.py  test_security.py
insight_engine/: Dockerfile  README.md  pyproject.toml  streaming_demo.py
insight_engine/.github/: FUNDING.yml
insight_engine/insight_engine/: __init__.py
insight_engine/tests/: test_insight_api.py
mcp-server-toolkit/: Makefile  README.md  pyproject.toml  skills-package.json
mcp-server-toolkit/mcp_toolkit/: __init__.py
mcp-server-toolkit/src/: index.ts
mcp-server-toolkit/tests/: conftest.py
rag-as-a-service/: .env.example  Dockerfile  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
rag-as-a-service/alembic/: env.py
rag-as-a-service/scripts/: load_test.py  locustfile.py  start.sh
rag-as-a-service/services/: document_processor.py  quota_service.py
rag-as-a-service/tests/: conftest.py  test_security.py
shared-schemas/: README.md  pyproject.toml
shared-schemas/ci_templates/: deploy-fly.yml  docker-build.yml  python-test.yml
shared-schemas/shared_infra/: __init__.py  auth_middleware.py  health.py  rate_limiter.py  stripe_billing.py
shared-schemas/shared_schemas/: __init__.py  auth.py  billing.py  events.py  tenant.py  validators.py
shared-schemas/tests/: conftest.py  test_auth.py  test_auth_middleware.py  test_billing.py  test_events.py  test_rate_limiter.py  test_stripe_billing.py  test_tenant.py  test_validators.py
voice-ai-platform/: .coveragerc  .env.example  Dockerfile  MVP_STATUS.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  verify_mvp.py
voice-ai-platform/alembic/: env.py
voice-ai-platform/tests/: __init__.py  conftest.py  test_security.py  test_voice_platform.py
voice-ai-platform/voice_platform/: __init__.py
(+8008 files in other folders)
