[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-hub"
version = "5.0.1"
description = "A unified platform for market analysis and enterprise tooling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cayman Roden", email = ""},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit==1.54.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "plotly==5.17.0",
    "yfinance==0.2.33",
    "ta==0.11.0",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/ChunkyTortoise/enterprise-hub"
Repository = "https://github.com/ChunkyTortoise/enterprise-hub"
Issues = "https://github.com/ChunkyTortoise/enterprise-hub/issues"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yfinance",
    "ta",
    "streamlit",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false

# pytest config in pytest.ini (takes precedence)

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".agent", "_archive", ".git", ".venv", "build", "dist",
    ".claude", "auto-claude", "scripts", "mcp-servers",
    "ghl_real_estate_ai/api/schemas/enterprise.py",
    "ghl_real_estate_ai/api/routes/billing.py",
    "ghl_real_estate_ai/services/ultra_fast_ml_engine.py",
    "ghl_real_estate_ai/streamlit_demo/components/primitives/card.py",
    "ghl_real_estate_ai/streamlit_demo/components/sales_copilot.py",
    "ghl_real_estate_ai/streamlit_demo/pages",
    "ghl_real_estate_ai/api/routes/market_intelligence.py",
    "ghl_real_estate_ai/api/schemas/white_label.py",
    "ghl_real_estate_ai/services/learning/test_*.py",
    "ghl_real_estate_ai/services/repositories/test_*.py",
    "ghl_real_estate_ai/services/scoring/test_*.py",
    "advanced_rag_system/test_phase3_complete.py",
    "advanced_rag_system/tests/benchmarks",
    "add_buyer_persona_to_bot.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",   # line-too-long — enforced at 120 but not blocking CI
    "E402",   # module-import-not-at-top — common in conditional imports
    "E701",   # multiple-statements-on-one-line — legacy style
    "E712",   # true-false-comparison — style preference
    "E721",   # type-comparison — use isinstance() preferred but not critical
    "E722",   # bare-except — to be fixed incrementally
    "E741",   # ambiguous-variable-name — false positives
    "F401",   # unused-import — too many __init__.py re-exports
    "F402",   # import-shadowed-by-loop-var — rare edge case
    "F403",   # undefined-local-with-import-star — legacy code
    "F405",   # undefined-local-with-import-star — legacy code
    "F601",   # multi-value-repeated-key — rare
    "F811",   # redefined-while-unused — common in test fixtures
    "F821",   # undefined-name — false positives from star imports
    "F823",   # undefined-local — rare edge case
    "F841",   # unused-variable — noisy in prototype code
    "F541",   # f-string-missing-placeholders — style
    "E703",   # useless-semicolon — legacy Jupyter-style code
    "E731",   # lambda-assignment — style preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E", "F"]
"ghl_real_estate_ai/tests/**" = ["E", "F"]
"__init__.py" = ["F401"]

[tool.ruff.lint.extend-per-file-ignores]
"ghl_real_estate_ai/api/schemas/enterprise.py" = ["ALL"]
"ghl_real_estate_ai/api/routes/billing.py" = ["ALL"]
