[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-hub"
version = "5.0.1"
description = "A unified platform for market analysis and enterprise tooling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cayman Roden", email = ""},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
# requirements.txt is authoritative — do not duplicate deps here.
# pip install -r requirements.txt for production, -r requirements-dev.txt for dev.

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/ChunkyTortoise/enterprise-hub"
Repository = "https://github.com/ChunkyTortoise/enterprise-hub"
Issues = "https://github.com/ChunkyTortoise/enterprise-hub/issues"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
explicit_package_bases = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
strict_equality = false
exclude = [
    "ghl_real_estate_ai/scripts/",
    "advanced_rag_system/tests/",
    "advanced_rag_system/test_",
]

[[tool.mypy.overrides]]
module = [
    "yfinance",
    "ta",
    "streamlit",
    "plotly.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Suppress all errors for legacy/untyped packages; tighten incrementally
module = [
    "ghl_real_estate_ai.*",
    "ghl_integration.*",
    "portal_api.*",
    "utils.*",
    "advanced_rag_system.*",
    "src.*",
    "app",
    "main",
    "mcp_server",
    "production_server",
    "admin_dashboard",
]
ignore_errors = true

[[tool.mypy.overrides]]
# Wave 1a: clean modules — zero errors, full checking
# Note: security_framework intentionally in Wave 1b only (needs SDK noise suppression)
module = [
    "ghl_real_estate_ai.api.routes.billing",
    "ghl_real_estate_ai.api.routes.webhook",
    "ghl_real_estate_ai.api.middleware.jwt_auth",
    "ghl_real_estate_ai.utils.sql_safety",
]
ignore_errors = false

[[tool.mypy.overrides]]
# Wave 1b: type-checked with noise suppression — catches real bugs (name-defined, return-value)
# while suppressing SDK typing noise (asyncpg, redis, prometheus_client lack strict stubs)
module = [
    "ghl_real_estate_ai.services.cache_service",
    "ghl_real_estate_ai.services.claude_orchestrator",
    "ghl_real_estate_ai.services.enhanced_ghl_client",
    "ghl_real_estate_ai.services.jorge.jorge_handoff_service",
    "ghl_real_estate_ai.services.jorge.ab_testing_service",
    "ghl_real_estate_ai.database.connection_manager",
    "ghl_real_estate_ai.observability.prometheus_exporter",
]
ignore_errors = false
disable_error_code = ["arg-type", "attr-defined", "assignment", "call-overload", "call-arg", "misc", "union-attr", "index", "operator", "typeddict-item", "typeddict-unknown-key", "var-annotated", "return-value", "dict-item", "override", "annotation-unchecked"]

[[tool.mypy.overrides]]
# Wave 1: transaction_service — enable checking, suppress SQLAlchemy ORM Column typing noise
module = ["ghl_real_estate_ai.services.transaction_service"]
ignore_errors = false
disable_error_code = ["arg-type", "attr-defined", "assignment", "call-overload", "misc"]

[[tool.mypy.overrides]]
# Wave 1: billing_service — enable checking but suppress Stripe SDK typing noise
# Stripe's strict type stubs don't match the dict-unpacking call pattern used here
module = ["ghl_real_estate_ai.services.billing_service"]
ignore_errors = false
disable_error_code = ["arg-type", "attr-defined", "assignment", "return-value", "call-arg"]

[[tool.mypy.overrides]]
# Wave 2: billing_auth — 0 errors, clean module
module = ["ghl_real_estate_ai.api.dependencies.billing_auth"]
ignore_errors = false

[[tool.mypy.overrides]]
# Wave 2: auth_service — explicit return None added to create_user
module = ["ghl_real_estate_ai.services.auth_service"]
ignore_errors = false

[[tool.mypy.overrides]]
# Wave 2: security_framework — real bugs fixed; suppress settings str|None noise + redis await unions
module = ["ghl_real_estate_ai.services.security_framework"]
ignore_errors = false
disable_error_code = ["assignment", "dict-item", "misc"]

[[tool.mypy.overrides]]
# Wave 2: webhook — missing import + bytes-in-f-string fixed; suppress structural typing noise
# Remaining errors are TypedDict/union-attr issues that need P2.1 god-class decomposition to fix properly
module = ["ghl_real_estate_ai.api.routes.webhook"]
ignore_errors = false
disable_error_code = ["arg-type", "typeddict-item", "typeddict-unknown-key", "union-attr", "operator", "call-arg"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingModuleSource = false

# pytest config in pytest.ini (takes precedence)

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".agent", ".git", ".venv", "build", "dist",
    ".claude", "auto-claude", "scripts", "mcp-servers", "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",   # line-too-long — enforced at 120 but not blocking CI
    "E402",   # module-import-not-at-top — common in conditional imports
    "E701",   # multiple-statements-on-one-line — legacy style
    "E712",   # true-false-comparison — style preference
    "E721",   # type-comparison — use isinstance() preferred but not critical
    "E741",   # ambiguous-variable-name — false positives
    "F401",   # unused-import — too many __init__.py re-exports
    "F402",   # import-shadowed-by-loop-var — rare edge case
    "F403",   # undefined-local-with-import-star — legacy code
    "F405",   # undefined-local-with-import-star — legacy code
    "F601",   # multi-value-repeated-key — rare
    "F811",   # redefined-while-unused — common in test fixtures
    "F821",   # undefined-name — false positives from star imports
    "F823",   # undefined-local — rare edge case
    "F841",   # unused-variable — noisy in prototype code
    "F541",   # f-string-missing-placeholders — style
    "E703",   # useless-semicolon — legacy Jupyter-style code
    "E731",   # lambda-assignment — style preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E", "F"]
"ghl_real_estate_ai/tests/**" = ["E", "F"]
"__init__.py" = ["F401"]

[tool.ruff.lint.extend-per-file-ignores]
"ghl_real_estate_ai/api/schemas/enterprise.py" = ["ALL"]
