[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docqa-engine"
version = "0.1.0"
description = "Enterprise-grade Retrieval-Augmented Generation engine with hybrid retrieval, re-ranking, and multi-modal support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Cayman Roden"},
]
keywords = ["rag", "retrieval-augmented-generation", "nlp", "ai", "document-qa", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.6.0",
    "chromadb>=0.4.18",
    "numpy<2",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "typing-extensions>=4.9.0",
    "structlog>=23.2.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "nltk>=3.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.8",
]
cohere = [
    "cohere>=4.0.0",
]
spacy = [
    "spacy>=3.7.0",
]
all = [
    "docqa-engine[dev,cohere,spacy]",
]

[project.urls]
Homepage = "https://github.com/CaymanRoden/EnterpriseHub"
Repository = "https://github.com/CaymanRoden/EnterpriseHub"
Documentation = "https://github.com/CaymanRoden/EnterpriseHub/tree/main/advanced_rag_system"

[tool.setuptools]
packages = [
    "docqa_engine",
    "docqa_engine.agents",
    "docqa_engine.core",
    "docqa_engine.embeddings",
    "docqa_engine.evaluation",
    "docqa_engine.middleware",
    "docqa_engine.monitoring",
    "docqa_engine.multimodal",
    "docqa_engine.query",
    "docqa_engine.reranking",
    "docqa_engine.retrieval",
    "docqa_engine.retrieval.advanced",
    "docqa_engine.retrieval.dense",
    "docqa_engine.retrieval.hybrid",
    "docqa_engine.retrieval.query",
    "docqa_engine.retrieval.sparse",
    "docqa_engine.structured_data",
    "docqa_engine.utils",
    "docqa_engine.vector_store",
]

[tool.setuptools.package-dir]
docqa_engine = "src"
