[project]
name = "agentforge"
version = "0.2.0"
description = "Lightweight multi-agent LLM orchestration framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "AgentForge Team", email = "team@agentforge.dev"}
]
keywords = ["llm", "ai-agents", "multi-agent", "orchestration", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Single required dependency - zero beyond Pydantic for base install
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
# LLM support
llm = [
    "litellm>=1.0.0",
    "httpx>=0.27.0",
]

# MCP protocol support
mcp = [
    "mcp>=1.0.0",
    "sse-starlette>=2.0.0",
]

# Observability
observe = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

# A2A protocol (zero-dependency - uses urllib.request with asyncio.to_thread)
# Optional: official A2A SDK when available
# a2a = ["a2a-python>=0.3"]

# Vector store backends
qdrant = [
    "qdrant-client>=1.6.0",
]

chroma = [
    "chromadb>=0.4.0",
]

# All optional dependencies (a2a is zero-dependency, included in base)
all = [
    "agentforge[llm,mcp,observe,qdrant,chroma]",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pyright>=1.1.350",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/agentforge/agentforge"
Repository = "https://github.com/agentforge/agentforge"
Documentation = "https://agentforge.readthedocs.io"
Issues = "https://github.com/agentforge/agentforge/issues"

[project.scripts]
agentforge = "agentforge.cli.main:main"

[project.entry-points."agentforge.plugins"]
logging = "agentforge.ext.builtins:LoggingPlugin"
metrics = "agentforge.ext.builtins:MetricsPlugin"
timing = "agentforge.ext.builtins:TimingPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentforge"]

[tool.hatch.build.targets.sdist]
include = ["agentforge", "README.md", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long
    "B904",   # raise without from inside except
    "F841",   # unused variable
    "F401",   # unused import
    "C408",   # unnecessary collection call
    "B905",   # zip without explicit strict
    "B007",   # unused loop control variable
    "UP042",  # replace str enum
    "SIM108", # if-else block instead of if-exp
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E", "F", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=agentforge --cov-report=term-missing"

[tool.coverage.run]
source = ["agentforge"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
