[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-devops-suite"
version = "0.1.0"
description = "Unified AI DevOps platform: agent monitoring, prompt registry, data pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "structlog>=24.0.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "stripe>=11.0.0",
    "streamlit>=1.41.0",
    # shared-schemas installed separately: pip install -e packages/shared-schemas/
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.36.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/devops_suite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
