[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-as-a-service"
version = "0.1.0"
description = "Multi-tenant RAG platform with hybrid search, PII detection, and Stripe billing"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis>=5.2",
    "stripe>=11",
    "httpx>=0.28",
    "slowapi>=0.1.9",
    "structlog>=24.0.0",
    "python-multipart>=0.0.9",
    # shared-schemas installed separately: pip install -e packages/shared-schemas/
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.28",
    "locust>=2.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_service"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
ignore = ["F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E", "F"]

[tool.mypy]
python_version = "3.12"
strict = false
