[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared-schemas"
version = "0.1.0"
description = "Shared schemas and infrastructure for the portfolio product suite"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.10",
    "fastapi>=0.115",
    "stripe>=11",
    "redis>=5.2",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["shared_schemas", "shared_infra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = false
