[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-ai-platform"
version = "0.1.0"
description = "Real-time Voice AI Agent Platform for real estate"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "stripe>=11.0.0",
    "httpx>=0.28.0",
    "twilio>=9.0.0",
    "deepgram-sdk>=3.0.0",
    "elevenlabs>=1.0.0",
    # shared-schemas installed separately: pip install -e packages/shared-schemas/
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/voice_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
